# quadcopter

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1
Common/: CMakeLists.txt
Common/Commands/: CMakeLists.txt  Command.c  Command.h
FlightController/cmake/: CMakeHAL.cmake  CMakeMacros.cmake
FlightController/scripts/: skyviper_flash
FlightController/src/: CMakeLists.txt
FlightController/src/Executables/: CMakeLists.txt
FlightController/src/HAL/: CMakeLists.txt
FlightController/src/HAL/Accelerometer/: CMakeLists.txt
FlightController/src/HAL/Accelerometer/Emulator/: CMakeLists.txt
FlightController/src/HAL/Accelerometer/LSM303D/: CMakeLists.txt
FlightController/src/Misc/: Version.h
FlightController/src/Platform/: CMakeLists.txt  Console.h  Platform.h
GroundStation/: GroundStation.pro  GroundStation.rc  main.cpp  resources.qrc
GroundStation/Core/: CommandsManager.cpp  CommandsManager.h  PadCalibrator.h  PadDriver.cpp  SteeringController.cpp  SteeringController.h
GroundStation/Misc/: Version.h
GroundStation/Tools/: TCPServer.h
GroundStation/Tools/Options/: CommandsOptions.cpp  LogsOptions.cpp
GroundStation/Windows/: AboutDialog.ui  CocpitConsoleWidget.cpp  ConsoleLogsWidget.cpp  ConsoleLogsWidget.ui  EmulatorWidget.cpp  FPVView.h  GoogleMapsView.h  SettingsDialog.h  SettingsDialog.ui
GroundStation/src/: GroundStation.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  resources.qrc
GroundStation/src/Core/: AlertsWidget.cpp  AlertsWidget.h  AlertsWidget.ui  CommandsManager.cpp  CommandsManager.h  ConsoleLogsWidget.cpp  ConsoleLogsWidget.h  ConsoleLogsWidget.ui  EmulatorWidget.cpp  EmulatorWidget.h  FPVView.cpp  FPVView.ui  PadCalibrator.cpp  PadCalibrator.h  PadController.cpp  PadController.h  PadDriver.cpp  PadDriver.h  SettingsDialog.cpp  SteeringController.cpp  SteeringController.h  SystemInfoWidget.h
GroundStation/src/Misc/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  SubsystemsStatus.h  Version.h
GroundStation/src/Tools/: IServer.cpp  IServer.h  Options.cpp  Options.h  SerialPortServer.cpp  SerialPortServer.h  TCPServer.cpp  TCPServer.h
GroundStation/src/Windows/: AboutDialog.cpp  CocpitConsoleWidget.h  ConsoleLogsWidget.cpp  ConsoleLogsWidget.h  EmulatorWidget.cpp  EmulatorWidget.h  EmulatorWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.cpp.autosave  SettingsDialog.h  SettingsDialog.ui  SystemInfoWidget.ui  TelemetryTabWidget.h
command/: CMakeLists.txt  command_common.c  command_common.h  command_control.c  command_control.h  command_debug.c  command_debug.h  command_debugInfo.c  command_debugInfo.h  command_decoder.c  command_decoder.h  command_emulator.c  command_emulator.h  command_encoder.c  command_encoder.h  command_statistics.c  command_statistics.h  command_systemStatus.c  command_systemStatus.h  command_telemetry.c  command_telemetry.h
common/: CMakeLists.txt
common/commands/: CMakeLists.txt  commands.c  commands.h  control.c  control.h  debug_info.c  debug_info.h  emulator.c  emulator.h  system_status.c  system_status.h  telemetry.c  telemetry.h
common/commands/control/: CMakeLists.txt  control.h
common/commands/debug_info/: CMakeLists.txt  debug_info.h
common/commands/emulator/: CMakeLists.txt  emulator.c  emulator.h
common/commands/system_status/: CMakeLists.txt  system_status.c  system_status.h
common/commands/telemetry/: CMakeLists.txt  telemetry.c  telemetry.h
flight-controller/: CMakeLists.txt
flight-controller/app/flight-controller/: CMakeLists.txt
flight-controller/app/unit-tests/: unit-tests.c
flight-controller/board/: board.c  board.h  board_pinout.h.in  console.h
flight-controller/board/emulator_board/: emulator_board.c  emulator_board.h  emulator_board_pinout.h  signal_handlers.c
flight-controller/board/stm32f4_discovery/: stm32f4_discovery.c  stm32f4_discovery.h  stm32f4_discovery_pinout.h  uart_console.c  uart_console.h
flight-controller/cmake/: cmake_settings.txt  drivers.cmake  environment.cmake  external_libs.cmake  macros.cmake  toolchain.cmake
flight-controller/core/: CMakeLists.txt
flight-controller/core/controller/: CMakeLists.txt  commands_manager.h  controller.c  controller.h  system_status.c  system_status.h
flight-controller/doc/: Doxyfile
flight-controller/doc/html/: annotated.html  classes.html  commands_8c.html  commands_8c__incl.map  commands_8c__incl.md5  commands_8c_a48062bd948be5dce9973272ea7a25bea_icgraph.md5  commands_8c_adb92d80a0ceef44b2f606c946c964511_cgraph.map  commands_8c_adb92d80a0ceef44b2f606c946c964511_cgraph.md5  commands_8c_affef987539161e1dcae70ca8a8959331_icgraph.map  commands_8c_affef987539161e1dcae70ca8a8959331_icgraph.md5  commands_8h.html  commands_8h__dep__incl.map  commands_8h__dep__incl.md5  commands_8h__incl.map  commands_8h__incl.md5  commands_8h_a07d5d77e64d209354c91466e4c4883ed_icgraph.map  commands_8h_a07d5d77e64d209354c91466e4c4883ed_icgraph.md5  commands_8h_a48062bd948be5dce9973272ea7a25bea_icgraph.map  commands_8h_source.html  control_8c.html  control_8c__incl.map  control_8c__incl.md5  control_8h.html  control_8h__dep__incl.map  control_8h__dep__incl.md5  control_8h__incl.map  control_8h__incl.md5  control_8h_source.html  debug__info_8c.html  debug__info_8c__incl.map  debug__info_8c__incl.md5  (+91 more)
flight-controller/hal/: gpio.h  hal.h  pwm.h  timer.h  uart.h
flight-controller/scripts/: quadcopter_debug  quadcopter_flash  quadcopter_gdb  skyviper_debug  skyviper_flash  skyviper_gdb
flight-controller/src/: CMakeLists.txt
flight-controller/src/drivers/accelerometer/: CMakeLists.txt  accelerometer.h
flight-controller/src/drivers/accelerometer/emulator/: emulated_accelerometer.c  emulated_accelerometer.h
flight-controller/src/drivers/accelerometer/lsm303d/: CMakeLists.txt
flight-controller/src/drivers/lights/: CMakeLists.txt  lights.h
flight-controller/src/drivers/lights/emulator/: emulated_lights.c  emulated_lights.h
flight-controller/src/drivers/lights/led/: led_lights.c  led_lights.h
flight-controller/utils/: utils.c  utils.h  version.h
(+350 files in other folders)
